Add opens to Maven wrapper.