@@ -121,6 +121,16 @@ SET MAVEN_JAVA_EXE="%JAVA_HOME%\bin\java.exe"
 set WRAPPER_JAR=""%MAVEN_PROJECTBASEDIR%\.mvn\3.2.5\maven-wrapper.jar""
 set WRAPPER_LAUNCHER=org.apache.maven.wrapper.MavenWrapperMain
 
+@REM Open Java base module on Java 9 and later to avoid Maven build failure.
+for /f tokens^=2-5^ delims^=.-_^" %%j in ('%JAVA_HOME%\bin\java -fullversion 2^>^&1') do set "JAVA_VERSION_STRING=%%j%%k%%l%%m"
+IF NOT "%JAVA_VERSION_STRING:~0,3%"=="160" (
+  IF NOT "%JAVA_VERSION_STRING:~0,3%"=="170" (
+    IF NOT "%JAVA_VERSION_STRING:~0,3%"=="180" (
+      set MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED %MAVEN_OPTS%"
+    )
+  )
+)
+
 @REM avoid using MAVEN_CMD_LINE_ARGS below since that would loose parameter escaping in %*
 %MAVEN_JAVA_EXE% %JVM_CONFIG_MAVEN_PROPS% %MAVEN_OPTS% %MAVEN_DEBUG_OPTS% -classpath %WRAPPER_JAR% "-Dmaven.multiModuleProjectDirectory=%MAVEN_PROJECTBASEDIR%" %WRAPPER_LAUNCHER% %MAVEN_CONFIG% %*
 if ERRORLEVEL 1 goto error
